--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                 <tr>
                   <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
-                    <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">Etch draws, And designs, and codes, and creates websites at a good price.</span>
+                    <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">Etch draws, and designs, and codes, and creates websites at a good price.</span>
                     <br> Want to see my site? <a href="https://etchdraws.github.io/etchscafe-home/#" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;">Click here!</a>.
                   </td>
                 </tr>
