--- a/index.html
+++ b/index.html
@@ -96,21 +96,7 @@
   </head>
   <body class="" style="background-color: #99c2f0; font-family: sans-serif; -webkit-font-smoothing: antialiased; font-size: 14px; line-height: 1.4; margin: 0; padding: 0; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;">
     <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">Hello there!!</span>
-    <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background-color: 
- 
-Hello!
-
-Thanks for reading this! Want to check my website out? click here!
-
-Call To Action
-No distractions, no ads,
-
-Just me, you, and this very intriguing button.
-
-Etch draws, and designs, and codes, and creates websites at a good price.
-Want to see my channel? Click here!.
-Powered by EtchDraws.
- ;">
+    <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background-color:#7dc1db;">
       <tr>
         <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">&nbsp;</td>
         <td class="container" style="font-family: sans-serif; font-size: 14px; vertical-align: top; display: block; Margin: 0 auto; max-width: 580px; padding: 10px; width: 580px;">
