--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ table[class=body] .article {
                     <tr>
                       <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Hello!</p>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">I'm Kit the protogen! More officially known as Etch da Wolfski! <br> Want to check my website out? click here!</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Thank you for becoming part of my patron! <br> You dont know how much this means to me, thank you again!</p>
                         <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;">
                           <tbody>
                             <tr>
@@ -132,8 +132,8 @@ table[class=body] .article {
                           </tbody>
                         </table>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">No distractions, no ads,</p>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Just me, you, and this very intriguing button.</p>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">You ever feel like you just want some good art done for you?.</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Just me, thanking you, and this very intriguing button.</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Now your part of my patron, your forever part of my heart.</p>
 
                       
                       
@@ -154,13 +154,13 @@ table[class=body] .article {
               <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                 <tr>
                   <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
-                    <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">MessageForm=Floral   ||    Etch draws, and designs, and codes, and creates websites at a good price.</span>
+                    <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">MessageForm=Floral   ||    THANKS SO MUCH!</span>
                     <br> Want to see my channel? <a href="https://www.youtube.com/channel/UCIR8IQCNussEFitmLSsLckg" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;">Click here!</a>.
                   </td>
                 </tr>
                 <tr>
                   <td class="content-block powered-by" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
-                    Powered by <a href="https://github.com/EtchDraws" style="color: #999999; font-size: 12px; text-align: center; text-decoration: none;">EtchDraws</a>.
+                    Powered by me.
                   </td>
                 </tr>
               </table>
