--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ table[class=body] .article {
                                 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto;">
                                   <tbody>
                                     <tr>
-                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #a8b090; border-radius: 5px; text-align: center;"> <a href="https://etchdraws.github.io/etchscafe-home/#" target="_blank" style="display: inline-block; color: #ffffff; background-color: #d6ff5c; border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-transform: capitalize; border-color: #3498db;">Go!</a> </td>
+                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #a8b090; border-radius: 5px; text-align: center;"> <a href="" target="_blank" style="display: inline-block; color: #ffffff; background-color: #d6ff5c; border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-transform: capitalize; border-color: #3498db;">Go back to patron!</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
@@ -146,7 +146,7 @@ table[class=body] .article {
             <!-- END MAIN CONTENT AREA -->
             </table>
             
-<p style="font-size: 24px">Nice to see you <strong>User!</strong></p>
+<p style="font-size: 24px">Nice to see you <strong>New patron member! (wink wink)</strong></p>
 
 
             <!-- START FOOTER -->
