--- a/index.html
+++ b/index.html
@@ -174,6 +174,6 @@ table[class=body] .article {
     </table>
   </body>
   <footer>
-    <img src=”https://www.dropbox.com/s/3bmcca5jii95ix6/Photo%20of%20meee.JPG?dl=0”>
+    <img src=”https://previews.dropbox.com/p/thumb/ABX3yvMTjLqNuaz-y2m5evUvIpvAHVKPSjJHFI3fheskg19F52TkqLvWL10A-xrfPFFbK0NtQNp7nlDi9HTry7agjU90db8E6eiXJnctWO8qEAm7DlVnIhjkbgIFA7ueEC-Kvffm7z2-xmIXuasZE9u2lsKbYXQ2GJES8liNh_yJPh7y9KnfN4J1kP899KTiUmN1bcEc-XV7dyjQ_vYekeBJyQZaR_Ww1Dl8qR3Fo2uZ3oy8JmUvssY9wK23qeTfHReqB4S-djHonEazBicKwXaytcBSEKrA1IgnMbqbK4X4SQ/p.jpeg?fv_content=true&size_mode=5”>
   </footer>
 </html>
