--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ table[class=body] .article {
 }
 </style>
   </head>
-  <body class style="background-color: #99c2f0; font-family: sans-serif; -webkit-font-smoothing: antialiased; font-size: 14px; line-height: 1.4; margin: 0; padding: 0; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;">
+  <body class style="background-color: #66cefa; font-family: sans-serif; -webkit-font-smoothing: antialiased; font-size: 14px; line-height: 1.4; margin: 0; padding: 0; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;">
     <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">Hello there!!</span>
     <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background-color:#f4bdff;">
       <tr>
@@ -106,7 +106,7 @@ table[class=body] .article {
           <div class="content" style="box-sizing: border-box; display: block; Margin: 0 auto; max-width: 580px; padding: 10px;">
 
             <!-- START CENTERED WHITE CONTAINER -->
-            <table class="main" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #ffffff; border-radius: 3px;">
+            <table class="main" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #bdffdd; border-radius: 3px;">
 
               <!-- START MAIN CONTENT AREA -->
               <tr>
@@ -123,7 +123,7 @@ table[class=body] .article {
                                 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto;">
                                   <tbody>
                                     <tr>
-                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #a8b090; border-radius: 5px; text-align: center;"> <a href="https://www.youtube.com/channel/UCsAefU3nkr2B9M4xyTUNZ2g" target="_blank" style="display: inline-block; color: #ffffff; background-color: #d6ff5c; border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-transform: capitalize; border-color: #3498db;">Go to my channel!!</a> </td>
+                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #a8b090; border-radius: 5px; text-align: center;"> <a href="https://www.youtube.com/channel/UCsAefU3nkr2B9M4xyTUNZ2g" target="_blank" style="display: inline-block; color: #000000; background-color: #29a364; border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-transform: capitalize; border-color: #12a163;">Go to my channel!!</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
