--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ table[class=body] .article {
           <div class="content" style="box-sizing: border-box; display: block; Margin: 0 auto; max-width: 580px; padding: 10px;">
 
             <!-- START CENTERED WHITE CONTAINER -->
-            <table class="main" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #bdffdd; border-radius: 3px;">
+            <table class="main" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #dbb3ff; border-radius: 3px;">
 
               <!-- START MAIN CONTENT AREA -->
               <tr>
@@ -123,7 +123,7 @@ table[class=body] .article {
                                 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto;">
                                   <tbody>
                                     <tr>
-                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #a8b090; border-radius: 5px; text-align: center;"> <a href="https://www.youtube.com/channel/UCsAefU3nkr2B9M4xyTUNZ2g" target="_blank" style="display: inline-block; color: #000000; background-color: #29a364; border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-transform: capitalize; border-color: #12a163;">Go to my channel!!</a> </td>
+                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #a8b090; border-radius: 5px; text-align: center;"> <a href="https://www.youtube.com/channel/UCsAefU3nkr2B9M4xyTUNZ2g" target="_blank" style="display: inline-block; color: #000000; background-color: #905fba; border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-transform: capitalize; border-color: #12a163;">Go to my channel!!</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
